# altstash

./: .gitignore  README.md  go.mod  go.sum  main.go  meson.build
cfg/: appid.go  apppath.go  author.go  configdir.go  copyright.go  datadir.go  description.go  homedir.go  iconsdir.go  name.go  talercoinsdir.go  version.go
data/: link.reiver.altstash.desktop.in  meson.build
docs/taler/: EXCHANGE.md
lib/coin/: amount.go  amount_test.go
lib/config/: config.go
lib/taler/coin/: amount.go  amount_test.go  amountnbo.go  amountnbo_test.go  balance.go  balance_test.go  coin.go  coinsource.go  denomsig.go  ext.go  load.go  load_test.go
testdata/: coin_eur_exchange_a_1.talercoin  coin_eur_exchange_a_2.talercoin  coin_eur_exchange_b_1.talercoin  coin_kudos_exchange_c_1.talercoin  coin_kudos_exchange_d_1.talercoin
ui/: about.go  app.go  balancelist.go  currencydetail.go  icons.go  receive.go  send.go  settings.go  window.go
