install_data(
  'link.reiver.altstash.desktop.in',
  rename: 'link.reiver.altstash.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(
  'icons/hicolor/scalable/actions/wallet-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
  'icons/hicolor/scalable/apps/link.reiver.altstash.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)
